# wikineitor-svn

./: configure.in  wikipedia.db
data/: Makefile.am  wikineitor.glade
po/: POTFILES.in
src/: Makefile.am  WikiDB.py  WikiWindow.py  wikineitor
